# markdown_ld

./: .formatter.exs  .gitignore  AGENTS.codex.md  BUILD.md  CHANGELOG.md  LICENSE  LSP.py  Makefile  PERFORMANCE_REPORT.md  PUBLISHING.md  README.md  RELEASE_NOTES_v0.4.0.md  ROADMAP.md  RUSTLER_PRECOMPILED_WORKAROUND.md  SPEC.diagrams.md  SPEC.md  SPEC.sessions.md  SPEC.v0.4.md  SPEC.wasm.md  lsp_client.py  lsp_test.json  lsp_test.py  mix.exs  simple_test.py
.github/: CODEOWNERS
.github/workflows/: ci.yml  jsonld-perf.yml  jsonld_ex-check.yml  native-artifacts-guard.yml  path-guard.yml  precompile.yml  release-precompiled.yml  test.yml
bench/: elixir_benchmark.exs  turbo_benchmark.exs
config/: config.exs  dev.exs  prod.exs  test.exs
docs/compression/: design.md  markdown_analysis.md
docs/mem8/: consciousness.rs  conversation.rs  design.md  memory.rs  simd.rs  wave.rs
docs/perf_samples/: sample_inline.md  sample_tables.md
docs/vfs/: design.md  repository_crystallizer.rs
examples/: ast_usage_example.exs  filesystem_mount_example.exs
examples/session_viewer/: README.md
examples/surreptitious/: hello_world.md  innocent_readme.md  meeting_notes.md
examples/wasm_host/: README.md
lib/: markdown_ld.ex  qcp.ex
lib/markdown_ld/: application.ex  ast.ex  attr_object.ex  cdfm.ex  compiler.ex  context_cache.ex  contexts.ex  determinism.ex  diff.ex  fallback.ex  jcs.ex  jsonld.ex  merge.ex  native.ex  sessions.ex  telemetry.ex  telemetry_agg.ex  telemetry_logger.ex  term_cache.ex  v03_complete.ex  wasm.ex
lib/markdown_ld/ast/: filesystem.ex  index.ex  node.ex  query.ex  transform.ex  walker.ex
lib/markdown_ld/diff/: apply.ex  block.ex  crdt.ex  format.ex  inline.ex  preview.ex  stream.ex
lib/markdown_ld/jsonld/: backend.ex  expand.ex
lib/qcp/: stream.ex
native/: Cargo.toml
native/.cargo/: config.toml
native/markdown_ld_core/: Cargo.toml
native/markdown_ld_core/src/: lib.rs
native/markdown_ld_nif/: Cargo.toml
native/markdown_ld_nif/src/: lib.rs  simd.rs
native/markdown_ld_nif/test_data/: large_doc.md  medium_doc.md
native/src/: lib.rs
native/true/markdown_ld_nif-1i240rhcay6ch/s-haclkkync4-0utdu4d-658pf15vrt4fcop4syeev7fkg/: b1fo8xowk9th0mlhoheztawue.pre-lto.bc
priv/: spec_workflow.json
priv/contexts/: lang.context.jsonld  sess.context.jsonld  tgx.context.jsonld  wasm.context.jsonld
schemas/contexts/: spec.jsonld
scripts/: bfg_purge_native.sh  build.sh  ci_check_no_native_artifacts.sh
test/: block_diff_test.exs  conflict_formatter_test.exs  diff_model_test.exs  heading_chunking_test.exs  jsonld_base_subject_test.exs  jsonld_datatype_test.exs  jsonld_diff_test.exs  jsonld_expand_test.exs  jsonld_image_and_vocab_test.exs  jsonld_inline_extract_test.exs  jsonld_more_datatypes_test.exs  jsonld_table_list_test.exs  jsonld_table_more_test.exs  l1_conformance_test.exs  markdown_ld_test.exs  merge_autoresolve_test.exs  merge_texts_test.exs  preview_test.exs  qcp_parser_test.exs  qcp_stream_test.exs  sessions_extractor_test.exs  stream_diff_test.exs  top_level_diff_test.exs  v03_complete_test.exs  wasm_extractor_test.exs
(+36 files in other folders)
